# playground-rs

./: Cargo.toml  Taskfile.yaml  flake.nix
backup/: Cargo.toml
backup/src/: lib.rs  save.rs
backup/src/repository/: document.rs
crates/builder/: Cargo.toml
crates/builder/src/: builder.rs  resource.rs  scheduler.rs
crates/builder/src/resource/: ingress.rs  tags.rs  workers.rs
crates/generic-type/: Cargo.toml
crates/generic-type/src/: lib.rs  main.rs
crates/item-system/: Cargo.toml
crates/item-system/src/: attribute.rs  inventory.rs  item.rs  item_base.rs  lib.rs
dispatch-errors/: Cargo.toml
item-system/: Cargo.toml
item-system/src/: lib.rs
src/: archive.rs  document.rs  downloader.rs  lib.rs  main.rs  repository.rs  service.rs  storage.rs
src/repository/: document.rs  mod.rs  save.rs
src/storage/: mod.rs
