[package]
name = "playground-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backup = { path = "backup", version = "0.1.0" }
item-system = { path = "item-system", version = "0.1.0" }
dispatch-errors = { path = "dispatch-errors", version = "0.1.0" }
thiserror = "1.0.56"
zip = "0.6.6"
walkdir = "2.4.0"
tempfile = "3.9.0"

[workspace]
members = [
  "backup",
  "item-system",
  "dispatch-errors"
]
